# mobile-agent-v8

./: .project
app/: CMakeLists.txt  build.gradle
app/imported-lib/: include.7z
app/imported-lib/arm64-v8a/: README.txt  readme.txt
app/imported-lib/armeabi-v7a/: README.txt
app/imported-lib/include/node/: config.gypi
app/src/androidTest/java/com/exprograma/mobile/mobileagentcpp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: agent_math.cpp  native-activity.cpp  native-lib.cpp
app/src/main/cpp/include/: agent_math.h
app/src/main/java/com/exprograma/mobile/mobileagentcpp/: FileSystem.kt  JNI.java  MainActivity.kt  WiFiActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_wi_fi.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/exprograma/mobile/mobileagentcpp/: ExampleUnitTest.kt
